# Promy

./: .gitignore  LICENSE  README.fr.md  README.md  pyproject.toml
Promy_raw/: README.md
deployment/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
deployment/api/: main.py  schemas.py
deployment/api/models/: ocr_model.py
deployment/api/preprocess/: image.py
deployment/front/: app.py
deployment/models/rec_infer/: inference.json
deployment/tests/: test_rec_vendor.py
models/PaddleOCR_Invoice_v2/: README.md  latency_benchmark.json
notebooks/: NB1_EDA.ipynb  NB2_Preprocessing.ipynb  NB3_Fine-tuning_DETRapidOCR_RECPaddleOCR.ipynb  NB_Comparatif.ipynb  NB_DET_Benchmark.ipynb  NB_experiment_TrOCR.ipynb  preprocessing.py
notebooks/outputs/det_benchmark/: per_image_metrics.csv  summary.json
workspace_paddleocr_invoice/: README.md  inference_raw_text.csv  inference_raw_text.json
workspace_paddleocr_invoice/export/rec_infer/: inference.yml
workspace_paddleocr_invoice/prepared_data/prepared_data/: pseudo_quality_train.csv  pseudo_quality_val.csv
workspace_paddleocr_invoice/runs/metrics/: rec_epoch_metrics.csv
workspace_paddleocr_invoice/runs/rec/: config.yml
workspace_paddleocr_invoice/testsAB_outputs/: avril2025auchan-local1704202519042029S0C0epagny-1.csv  avril2025auchan-local1704202519042029S0C0epagny-1.json  avril2025auchan-local1704202519042029S0C0epagny-1.txt  batch3-0501.csv  batch3-0501.json  batch3-0501.txt  hors_corpus_local.csv  hors_corpus_local.json  hors_corpus_local.txt
