[project]
name = "promy-ocr"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn==0.42.0",
    "python-multipart==0.0.22",
    "paddlepaddle==3.3.1",
    "rapidocr-onnxruntime==1.4.4",
    "opencv-python-headless==4.13.0.92",
    "pillow==12.1.1",
    "numpy==2.4.3",
    "pandas>=2.0",
    "setuptools>=70",
    "streamlit>=1.35",
    "requests==2.33.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
